--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "tmp-cpa",
+  "name": "teru-components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
+    "@plasmicapp/host": "^0.0.29",
     "@plasmicapp/loader-nextjs": "^1.0.30",
-    "@types/react": "^17.0.30",
+    "@plasmicapp/react-web": "^0.2.87",
+    "@tailwindcss/forms": "^0.3.4",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typescript": "^4.4.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "17.0.30",
+    "autoprefixer": "^10.3.7",
     "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.17",
+    "typescript": "4.4.4"
   }
 }
